Fix alignment on viewtopic

--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -252,6 +252,7 @@ label.strong {
 
 .description {
   font-weight: normal;
+  font-size: 12px;
   color:  #888;
 }
 
